--- a/style.css
+++ b/style.css
@@ -61,32 +61,57 @@ p {
     margin: 25px auto;
 }
 
-#Menu {
+.Menu {
     font-family:sans-serif;
-    position: absolute;
+    position: fixed;
     z-index: 10;
     list-style:none;
-    top: 20px;
-    right: 30px;
+    top: 0px;
+    background-color: aliceblue;
     cursor: pointer;
 }
 
 .Links {
-    float: left;
+    display: inline;
     color: darkcyan;
-    padding:11px;
+    padding-left:33px;
+    padding-right:25px;
     font-family: fantasy;
     font-size: 20px;
 }
 
 .Links:hover {
     background-color: ghostwhite;
+    font-size: 25px;
+    text-decoration: underline;
 }
+
 html {
     scroll-behavior: smooth;
 }
 
 .Article:hover {
     color: dodgerblue;
+    
+}
+
+a {
+    text-decoration: none;
+    color: blue;
+    text-shadow: 2px 2px yellow;
+}
+
+#Writing a {
+    text-decoration:underline!important;
+    color: blue!important;
+    text-shadow:none!important;
+}
+
+#Contacts {
+    background-color: coral;
+}
+
+.C1 {
+    display:inline;
     
 }
